--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
     font-optical-sizing: auto;
     font-weight: normal;
     font-style: normal;
+    color: #0D1321;
 }
 
 /* sheared style */
@@ -59,17 +60,31 @@ main {
     margin: 150px auto;
 }
 
+main section {
+    margin-bottom: 90px;
+}
+
 /* development section styles */
+.development {
+    background-color: rgba(13, 19, 33, 0.02);
+    padding-bottom: 80px;
+    border-radius: 16px;
+}
+
 .development-title {
     font-size: 32px;
     font-weight: 900;
+    padding-top: 80px;
 }
 
 .section-row {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 50px;
+    background-color: rgba(255, 255, 255, 1.00);
+    margin: 37px 97px;
+    padding: 48px;
+    border-radius: 16px;
 }
 
 .section-column {
@@ -89,4 +104,33 @@ main {
     font-size: 16px;
     font-weight: 600;
 
+}
+
+/* inspiration section style */
+
+.inspiration-content {
+    max-width: 852px;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.section-title {
+    font-size: 32px;
+    font-weight: 900;
+
+}
+
+.inspiration iframe {
+    width: 100%;
+    height: 550px;
+    padding: 32px;
+    border: 1px solid rgba(13, 19, 33, 0.20);
+    border-radius: 16px;
+}
+
+/* current target styles */
+.current-target-content {
+    max-width: 852px;
+    margin: 0 auto;
+    text-align: center;
 }
